--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,22 +1,25 @@
-name: front project deployment
+name: project deployment
 on:
   push:
-    branches: ["main"]
+    branches: [ master ]
 jobs:
   build:
+    name: build
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x]
     steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
-      - run: npm i
-      - run: npm run build --if-present
+          distribution: temurin
+          java-version: '17'
+      - name: Build jar with Gradle (uses build cache)
+        uses: gradle/actions/setup-gradle@v4
+      - name: Gradle build
+        run: |
+          chmod +x ./gradlew
+          ./gradlew clean bootJar
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
@@ -29,7 +32,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/phanes-front-k8s:${{ github.run_number }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring_basic-k8s:${{ github.run_number }}
 
   deploy:
     name: deploy
@@ -44,7 +47,7 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: 222
           script: |
-            if kubectl get svc phanes-front-svc -n lhs -o wide | grep -q "green"; then
+            if kubectl get svc phanes-back-svc -n lhs -o wide | grep -q "green"; then
               CURRENT_VER="green"
               NEXT_VER="blue"
             else
@@ -56,12 +59,12 @@ jobs:
             apiVersion: apps/v1
             kind: Deployment
             metadata:
-              name: phanes-front-deployment-${NEXT_VER}
+              name: phanes-deployment-${NEXT_VER}
               namespace: lhs
             spec:
               selector:
                 matchLabels:
-                  type: front
+                  type: app
                   ver: ${NEXT_VER}
               replicas: 1
               strategy:
@@ -69,44 +72,44 @@ jobs:
               template:
                 metadata:
                   labels:
-                    type: front
+                    type: app
                     ver: ${NEXT_VER}
                 spec:
                   containers:
                     - name: container
-                      image: why48382/phanes-front-k8s:${{ github.run_number }}
+                      image: why48382/spring_basic-k8s:${{ github.run_number }}
                       livenessProbe:
                         httpGet:
                           path: /health
-                          port: 80
+                          port: 8080
                         initialDelaySeconds: 20
                         periodSeconds: 10
                       readinessProbe:
                         httpGet:
                           path: /test
-                          port: 80
+                          port: 8080
                         initialDelaySeconds: 20
                         periodSeconds: 10
                         successThreshold: 3
                   terminationGracePeriodSeconds: 0
             EOF
 
-            kubectl rollout status deployment/phanes-front-deployment-${NEXT_VER} -lhs
+            kubectl rollout status deployment/phanes-deployment-${NEXT_VER} -lhs
 
             cat <<EOF | kubectl apply -f -
             apiVersion: v1
             kind: Service
             metadata:
-              name: phanes-front-svc
+              name: phanes-back-svc
               namespace: lhs
             spec:
               selector:
-                type: front
+                type: app
                 ver: ${NEXT_VER}
               ports:
-                - port: 80
-                  targetPort: 80
+                - port: 443
+                  targetPort: 8080
               type: LoadBalancer
             EOF
 
-            kubectl scale deployment phanes-front-deployment-${CURRENT_VER} -n lhs --replicas=0
+            kubectl scale deployment phanes-deployment-${CURRENT_VER} -n lhs --replicas=0
