yml 서비스 port 수정

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -78,6 +78,11 @@ jobs:
                   containers:
                     - name: container
                       image: why48382/spring_basic-k8s:${{ github.run_number }}
+                      ports:
+                      - containerPort: 8080
+                        envFrom:
+                        - configMapRef:
+                            name: phanes-editor-back-env
                       livenessProbe:
                         httpGet:
                           path: /health
